--- a/frontend/public/add_expense.html
+++ b/frontend/public/add_expense.html
@@ -7,34 +7,37 @@
     <link rel="stylesheet" href="./add_expense.css">
 </head>
 <body>
-    <header>
-        <h1>Add Expense</h1>
-    </header>
-    <main>
-        <form id="add-expense-form">
-            <label for="name">Expense Name</label>
-            <input type="text" id="name" name="name" required>
-            <label for="amount">Amount</label>
-            <input type="number" id="amount" name="amount" required>
-            <label for="category">Category</label>
-            <select id="category" name="category">
-                <option value="Food">Food</option>
-                <option value="Transport">Transport</option>
-                <option value="Entertainment">Entertainment</option>
-                <option value="Rent">Rent</option>
-                <option value="Utilities">Utilities</option>
-                <option value="Savings">Savings</option>
-                <option value="Education">Education</option>
-                <option value="Donation">Donations</option>
-                <option value="Groceries">Groceries</option>
-                <option value="Leisure">Leisure</option>
-                <option value="Others">Others</option>
-            </select>
-            <label for="date">Date</label>
-            <input type="date" id="date" name="date" required>
-            <button type="submit" onclick="addexpense">Add Expense</button>
-        </form>
-    </main>
+    <div class="container">
+        <header>
+            <h1>Add Expense</h1>
+        </header>
+        <main>
+            <form id="add-expense-form">
+                <label for="name">Expense Name</label>
+                <input type="text" id="name" name="name" required>
+                <label for="amount">Amount</label>
+                <input type="number" id="amount" name="amount" required>
+                <label for="category">Category</label>
+                <select id="category" name="category">
+                    <option value="Food">Food</option>
+                    <option value="Transport">Transport</option>
+                    <option value="Entertainment">Entertainment</option>
+                    <option value="Rent">Rent</option>
+                    <option value="Utilities">Utilities</option>
+                    <option value="Savings">Savings</option>
+                    <option value="Education">Education</option>
+                    <option value="Donation">Donations</option>
+                    <option value="Groceries">Groceries</option>
+                    <option value="Leisure">Leisure</option>
+                    <option value="Others">Others</option>
+                </select>
+                <label for="date">Date</label>
+                <input type="date" id="date" name="date" required>
+                <button type="submit" onclick="addexpense">Add Expense</button>
+            </form>
+        </main>
+    </div>
+    
     <script src="src/js/add_expense.js"></script>
 </body>
 </html>
