--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -116,9 +116,15 @@
             <section id="contact">
                 <div class="section-content">
                     <h3>Contact Us</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
-                     Aliquam earum nulla quo. Ullam itaque officiis, velit quis illo hic <br/>
-                     assumenda tempora id quos dolores quasi maxime quisquam delectus, ad voluptates.</p>
+                    <form action="/send-message" method="post">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                        <button type="submit">Send</button>
+                    </form>
                 </div>
             </section>
         </main>
