--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -41,63 +41,64 @@
 
             <section id="about">
                 <div class="section-content">
+                    <div class="image">
+                        <img src="../image2.jpeg" alt="About Image">
+                    </div>
                     <div class="text">
                         <h3>About us</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
                          Aliquam earum nulla quo. Ullam itaque officiis, velit quis illo hic <br/>
                          assumenda tempora id quos dolores quasi maxime quisquam delectus, ad voluptates.</p>
                     </div>
-                    <div class="image">
-                        <img src="../about-image.png" alt="About Image">
-                    </div>
+                  
                 </div>
             </section>
 
             <section id="products">
-                <h3>Our Products</h3>
+                <center><h3>Our Products</h3></center>
                 <div class="cards">
                     <div class="card">
-                        <img src="../product1.png" alt="Product 1">
+                        <img src="../image.png" alt="Product 1">
                         <h4>Product 1</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product2.png" alt="Product 2">
+                        <img src="../image.png" alt="Product 2">
                         <h4>Product 2</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product3.png" alt="Product 3">
+                        <img src="../image.png" alt="Product 3">
                         <h4>Product 3</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product4.png" alt="Product 4">
+                        <img src="../image.png" alt="Product 4">
                         <h4>Product 4</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product5.png" alt="Product 5">
+                        <img src="../image.png" alt="Product 5">
                         <h4>Product 5</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product6.png" alt="Product 6">
+                        <img src="../image.png" alt="Product 6">
                         <h4>Product 6</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product7.png" alt="Product 7">
+                        <img src="../image.png" alt="Product 7">
                         <h4>Product 7</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product8.png" alt="Product 8">
+                        <img src="../image.png" alt="Product 8">
                         <h4>Product 8</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../product9.png" alt="Product 9">
+                        <img src="../image.png" alt="Product 9">
                         <h4>Product 9</h4>
                         <p>Product description.</p>
                     </div>
@@ -115,7 +116,7 @@
 
             <section id="contact">
                 <div class="section-content">
-                    <h3>Contact Us</h3>
+                   <center><h3>Contact Us</h3></center> 
                     <form action="/send-message" method="post">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
