--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Expense Tracker</h1>
+            <h1 class="typewriter">Expense Tracker</h1>
             <nav>
                 <div class="navone">
                     <a href="#welcome-page">Home</a>
@@ -116,18 +116,28 @@
 
             <section id="contact">
                 <div class="section-content">
-                   <center><h3>Contact Us</h3></center> 
-                    <form action="/send-message" method="post">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="4" required></textarea>
-                        <button type="submit">Send</button>
-                    </form>
+                    <center><h3>Contact Us</h3></center>
+                    <div class="contact-container">
+                        <div class="contact-form">
+                            <form action="/send-message" method="post">
+                                <label for="name">Name:</label>
+                                <input type="text" id="name" name="name" required>
+                                <label for="email">Email:</label>
+                                <input type="email" id="email" name="email" required>
+                                <label for="message">Message:</label>
+                                <input type="email" id="email" name="email" required>
+                                <label for="message">Message:</label>
+                                <textarea id="message" name="message" rows="4" required></textarea>
+                                <button type="submit">Send</button>
+                            </form>
+                        </div>
+                        <div class="contact-map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019955774945!2d-122.419415284681!3d37.7749292797597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c8408d3a1%3A0x96f24e2db8b8f93!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1537910192949" width="600" height="450" style="border:0" allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
             </section>
+            
         </main>
         <footer>
             <p>&copy; 2024 Expense Tracker. All rights reserved.</p>
