--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="typewriter">Expense Tracker</h1>
+            <h1>Expense Tracker</h1>
             <nav>
                 <div class="navone">
                     <a href="#welcome-page">Home</a>
@@ -27,7 +27,7 @@
         <main>
             <section id="welcome-page">
                 <div id="welcome-text">
-                    <h2>Welcome to the Expense Tracker</h2>
+                    <h2 class="typewriter">Welcome to the Expense Tracker</h2>
                     <p>Effortlessly manage your finances with our user-friendly Expense Tracker. <br />
                         Stay on top of your spending, track your expenses, and achieve your financial goals.<br/> 
                         Whether you're budgeting for personal or business needs, our intuitive platform <br/> 
