--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,10 +42,10 @@
             <section id="about">
                 <div class="section-content">
                     <div class="image">
-                        <img src="../image2.jpeg" alt="About Image">
+                        <img src="../logo1.png" alt="About Image">
                     </div>
                     <div class="text">
-                        <h3>About us</h3>
+                        <h3 class="content">About us</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
                          Aliquam earum nulla quo. Ullam itaque officiis, velit quis illo hic <br/>
                          assumenda tempora id quos dolores quasi maxime quisquam delectus, ad voluptates.</p>
@@ -55,7 +55,7 @@
             </section>
 
             <section id="products">
-                <center><h3>Our Products</h3></center>
+                <center><h3 class="content">Our Products</h3></center>
                 <div class="cards">
                     <div class="card">
                         <img src="../image.png" alt="Product 1">
@@ -107,7 +107,7 @@
 
             <section id="services">
                 <div class="section-content">
-                    <h3>Services</h3>
+                    <h3 class="content">Services</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
                      Aliquam earum nulla quo. Ullam itaque officiis, velit quis illo hic <br/>
                      assumenda tempora id quos dolores quasi maxime quisquam delectus, ad voluptates.</p>
@@ -116,7 +116,7 @@
 
             <section id="contact">
                 <div class="section-content">
-                    <center><h3>Contact Us</h3></center>
+                    <center><h3 class="content">Contact Us</h3></center>
                     <div class="contact-container">
                         <div class="contact-form">
                             <form action="/send-message" method="post">
