--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -21,7 +21,11 @@
                 <input type="password" id="password" name="password" required>
                 <button type="submit">Register</button>
             </form>
-            <p class="small">Already have an account? <a href="login.html">Login here</a></p>
+            <div class="bottom">
+                <p class="small">Already have an account? <a href="login.html">Login here</a></p>
+                <p class="small" href="index.html">Back to home</p>
+            </div>
+            
         </main>
     </div>
     
