--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -19,7 +19,10 @@
                 <input type="password" id="password" name="password" required>
                 <button type="submit" href="index.html">Login</button>
             </form>
-            <p class="small">New user? <a href="register.html">Register here</a></p>
+            <div class="bottom">
+                <p class="small">New user? <a href="register.html">Register Here</a></p>
+                <p class="small"> <a href="index.html">Back to home</a></p>
+            </div>
         </main>
     </div>
     
