--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -23,7 +23,7 @@
             </form>
             <div class="bottom">
                 <p class="small">Already have an account? <a href="login.html">Login here</a></p>
-                <p class="small" href="index.html">Back to home</p>
+                <p class="small"> <a href="index.html">Back to home</a></p>
             </div>
             
         </main>
