--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -27,11 +28,12 @@
         <main>
             <section id="welcome-page">
                 <div id="welcome-text">
-                    <h2 class="typewriter">Welcome to the Expense Tracker</h2>
+                    <h2 class="typewriter">Welcome to Expense Tracker</h2>
                     <p>Effortlessly manage your finances with our user-friendly Expense Tracker. <br />
                         Stay on top of your spending, track your expenses, and achieve your financial goals.<br/> 
                         Whether you're budgeting for personal or business needs, our intuitive platform <br/> 
-                        ensures you have complete control over your financial health. Join us today and take the first step towards smarter financial management.</p>
+                        ensures you have complete control over your financial health.
+                    </p>
                     <h5>Keep track of your expenses efficiently and effectively. Register or log in to get started!</h5>
                 </div>
                 <div id="welcome-image">
@@ -105,14 +107,12 @@
                 </div>
             </section>
 
-            <section id="services">
+            <!-- <section id="services">
                 <div class="section-content">
-                    <h3 class="content">Services</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
-                     Aliquam earum nulla quo. Ullam itaque officiis, velit quis illo hic <br/>
-                     assumenda tempora id quos dolores quasi maxime quisquam delectus, ad voluptates.</p>
-                </div>
-            </section>
+                    <h3>Services</h3>
+                    
+            </section> -->
+            
 
             <section id="contact">
                 <div class="section-content">
@@ -144,5 +144,8 @@
         </footer>
     </div>
     <script src="src/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
