--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="left-section">
             <img class="hamburger-menu" src="../icons/hamburger-menu.svg" alt="Menu">
-            <img class="dashboard-logo" src="../icons/youtube-logo.svg" alt="Logo">
+            <!-- <img class="dashboard-logo" src="../icons/youtube-logo.svg" alt="Logo"> -->
         </div>
         <div class="right-section">
             <div class="settings">
@@ -23,6 +23,7 @@
             <button class="sign-out">Sign Out</button>
         </div>
     </header>
+   
     
     <nav class="sidebar">
         <div class="sidebar-link">
@@ -44,6 +45,7 @@
     </nav>
     
     <main>
+        <center><p style="color: black; font-size: 16px; font-weight: 500;">Expense Tracker Dashboard</p></center>
         <section class="content">
             <h2>Add Expense</h2>
             <form id="expense-form">
