--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -17,7 +17,7 @@
                 <input type="text" id="username" name="username" required>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
-                <button type="submit" href="index.html">Login</button>
+                <button type="submit" href="index.html" onclick="()=>{window.location.href='dashboard.html'}">Login</button>
             </form>
             <div class="bottom">
                 <p class="small">New user? <a href="register.html">Register Here</a></p>
