--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -10,7 +10,6 @@
     <header class="header">
         <div class="left-section">
             <img class="hamburger-menu" src="../icons/hamburger-menu.svg" alt="Menu">
-            <!-- <img class="dashboard-logo" src="../icons/youtube-logo.svg" alt="Logo"> -->
         </div>
         <div class="right-section">
             <div class="settings">
@@ -23,7 +22,6 @@
             <button class="sign-out">Sign Out</button>
         </div>
     </header>
-   
     
     <nav class="sidebar">
         <div class="sidebar-link">
@@ -45,7 +43,7 @@
     </nav>
     
     <main>
-        <center><p style="color: black; font-size: 16px; font-weight: 500;">Expense Tracker Dashboard</p></center>
+        <center style="margin-bottom: 30px;"><p style="color: black;">Expense Tracker Dashboard</p></center>
         <section class="content">
             <h2>Add Expense</h2>
             <form id="expense-form">
@@ -73,6 +71,7 @@
                         <th>Category</th>
                         <th>Date</th>
                         <th>Created At</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -82,6 +81,6 @@
         </section>
     </main>
 
-    <script src="../src/dashboard.js"></script>
+    <script src="dashboard.js"></script>
 </body>
 </html>
