--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -21,7 +21,7 @@
             </form>
             <div class="bottom">
                 <p class="small">New user? <a href="register.html">Register Here</a></p>
-                <p class="small"> <a href="index.html">Back to home</a></p>
+                <p class="small"> <a href="dashboard.html">Back to home</a></p>
             </div>
         </main>
     </div>
