--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -14,7 +14,7 @@
         <div class="right-section">
             <div class="settings">
                 <img src="../icons/settings.svg" alt="Settings">
-                <div class="tooltip">Settings</div>
+                <!-- <div class="tooltip">Settings</div> -->
             </div>
             <div class="welcome">
                 <span>Welcome, <span id="username">Username</span></span>
