--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -119,7 +119,7 @@
                     <center><h3 class="content">Contact Us</h3></center>
                     <div class="contact-container">
                         <div class="contact-form">
-                            <form action="/send-message" method="post">
+                            <form action="/contact" method="post">
                                 <label for="name">Name:</label>
                                 <input type="text" id="name" name="name" required>
                                 <label for="email">Email:</label>
@@ -143,6 +143,33 @@
             <p>&copy; 2024 Expense Tracker. All rights reserved.</p>
         </footer>
     </div>
+    <script>
+        document.getElementById('contactForm').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const formData = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                phone: document.getElementById('phone').value,
+                message: document.getElementById('message').value
+            };
+
+            try {
+                const response = await fetch('/api/contact', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                const result = await response.json();
+                alert(result);
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+    </script>
     <script src="src/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
