--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -124,8 +124,8 @@
                                 <input type="text" id="name" name="name" required>
                                 <label for="email">Email:</label>
                                 <input type="email" id="email" name="email" required>
-                                <label for="message">Message:</label>
-                                <input type="email" id="email" name="email" required>
+                                <label for="phone">Phone:</label>
+                                <input type="number" id="phone" name="phone" required>
                                 <label for="message">Message:</label>
                                 <textarea id="message" name="message" rows="4" required></textarea>
                                 <button type="submit">Send</button>
