--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,14 +37,14 @@
                     <h5>Keep track of your expenses efficiently and effectively. Register or log in to get started!</h5>
                 </div>
                 <div id="welcome-image">
-                    <img src="../image.png" alt="Welcome Image">
+                    <img src="../public/image.png" alt="Welcome Image">
                 </div>
             </section>
 
             <section id="about">
                 <div class="section-content">
                     <div class="image">
-                        <img src="../logo1.png" alt="About Image">
+                        <img src="../public/logo.png" alt="About Image">
                     </div>
                     <div class="text">
                         <h3 class="content">About us</h3>
@@ -60,47 +60,47 @@
                 <center><h3 class="content">Our Products</h3></center>
                 <div class="cards">
                     <div class="card">
-                        <img src="../image.png" alt="Product 1">
+                        <img src="../public/image.png" alt="Product 1">
                         <h4>Product 1</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 2">
+                        <img src="../public/image.png" alt="Product 2">
                         <h4>Product 2</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 3">
+                        <img src="../public/image.png" alt="Product 3">
                         <h4>Product 3</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 4">
+                        <img src="../public/image2.jpeg" alt="Product 4">
                         <h4>Product 4</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 5">
+                        <img src="../public/image2.jpeg" alt="Product 5">
                         <h4>Product 5</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 6">
+                        <img src="../public/image.png" alt="Product 6">
                         <h4>Product 6</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 7">
+                        <img src="../public/image2.jpeg" alt="Product 7">
                         <h4>Product 7</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 8">
+                        <img src="../public/image.png" alt="Product 8">
                         <h4>Product 8</h4>
                         <p>Product description.</p>
                     </div>
                     <div class="card">
-                        <img src="../image.png" alt="Product 9">
+                        <img src="../public/image.png" alt="Product 9">
                         <h4>Product 9</h4>
                         <p>Product description.</p>
                     </div>
@@ -119,7 +119,7 @@
                     <center><h3 class="content">Contact Us</h3></center>
                     <div class="contact-container">
                         <div class="contact-form">
-                            <form action="/contact" method="post">
+                            <form action="/contact" method="post" id="contactForm">
                                 <label for="name">Name:</label>
                                 <input type="text" id="name" name="name" required>
                                 <label for="email">Email:</label>
